--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
 }
 
 test {
